1. Collection API Улучшения[#93253]