@@ -17,11 +17,11 @@ public class ProfileTest {
         Address address1 = new Address("Москва");
         Address address2 = new Address("СПб");
         Address address3 = new Address("Тула");
-        List<Profile> profiles = Arrays.asList(new Profile(address1),
+        List<Profile> profiles = List.of(new Profile(address1),
                 new Profile(address2),
                 new Profile(address3));
         List<Address> result = new Profile(address1).collect(profiles);
-        List<Address> expected = Arrays.asList(address1,
+        List<Address> expected = List.of(address1,
                 address2,
                 address3);
         assertThat(result, is(expected));
@@ -33,12 +33,12 @@ public class ProfileTest {
         Address address2 = new Address("СПб");
         Address address3 = new Address("Тула");
         Address address4 = new Address("Тула");
-        List<Profile> profiles = Arrays.asList(new Profile(address1),
+        List<Profile> profiles = List.of(new Profile(address1),
                 new Profile(address2),
                 new Profile(address3),
                 new Profile(address4));
         List<Address> result = new Profile(address1).collect(profiles);
-        List<Address> expected = Arrays.asList(address1,
+        List<Address> expected = List.of(address1,
                 address2,
                 address3);
         assertThat(result, is(expected));
